Anonymous | Login | 2021-01-26 06:28 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0023266 | Community | [OCCT] OCCT:DRAW | public | 2012-07-12 13:59 | 2012-11-16 13:17 | ||||
Reporter | Pawel | ||||||||
Assigned To | ika | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2005 | OS Version | 32 bit | ||||
Product Version | [OCCT] 6.5.3 | ||||||||
Target Version | [OCCT] 6.5.4 | Fixed in Version | [OCCT] 6.5.4 | ||||||
Summary | 0023266: cppcheck warning: Logical disjunction always evaluates to true | ||||||||
Description | In QANewDBRepNaming_FeatureCommands.cxx the line (104): if (nb != 6 || nb != 7) always yields 'true' and so the method always returns. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0021699) ika (developer) 2012-10-09 18:12 |
Git branch CR23266 is ready to be reviewed. Dear Oleg, Please review. |
(0021702) oan (developer) 2012-10-09 19:19 |
No comments, please test. |
(0021735) mkv (tester) 2012-10-11 19:16 |
Dear BugMaster, Branch CR23266 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed See results in /QADisk/occttests/results/KAS/dev/CR23266-master-products_11102012/lin See reference results in /QADisk/occttests/results/KAS/dev/IR-2012-10-05-master-products_05102012/lin See test cases in /QADisk/occttests/tests/ED |
![]() |
|||
occt: master a7ae5c81
Timestamp: 2012-10-09 14:00:27 Author: ika [ Details ] [ Diff ] |
0023266: cppcheck warning: Logical disjunction always evaluates to true Logical disjunction changed to Logical conjunction, it evaluates true only then number of parameters isn't right. |
||
mod - src/QANewDBRepNaming/QANewDBRepNaming_FeatureCommands.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2012-07-12 13:59 | Pawel | New Issue | |
2012-07-12 13:59 | Pawel | Assigned To | => bugmaster |
2012-10-04 11:59 | Pawel | Relationship added | duplicate of 0023098 |
2012-10-09 10:16 | oan | Assigned To | bugmaster => ika |
2012-10-09 10:19 | oan | Status | new => assigned |
2012-10-09 18:10 | ika | Assigned To | ika => oan |
2012-10-09 18:12 | ika | Note Added: 0021699 | |
2012-10-09 19:17 | oan | Status | assigned => resolved |
2012-10-09 19:19 | oan | Note Added: 0021702 | |
2012-10-09 19:19 | oan | Status | resolved => reviewed |
2012-10-10 18:51 | mkv | Assigned To | oan => mkv |
2012-10-11 19:16 | mkv | Note Added: 0021735 | |
2012-10-11 19:18 | mkv | Test case number | => Not needed |
2012-10-11 19:18 | mkv | Assigned To | mkv => bugmaster |
2012-10-11 19:18 | mkv | Status | reviewed => tested |
2012-10-16 15:21 | ika | Changeset attached | => occt master a7ae5c81 |
2012-10-16 15:21 | ika | Assigned To | bugmaster => ika |
2012-10-16 15:21 | ika | Status | tested => verified |
2012-10-16 15:21 | ika | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |