0023266: cppcheck warning: Logical disjunction always evaluates to true

Logical disjunction changed to  Logical conjunction, it evaluates true only then number of parameters isn't right.